# GameOfLife

./: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  config  doxygen_log.txt  game_of_life  generation.c  install_manifest.txt  main.c
.github/workflows/: ccpp.yml
Doxygen/html/: 3_810_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  3_817_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  ansi_8c.html  ansi_8h.html  ansi_8h_source.html  circular_8c.html  circular_8h.html  circular_8h_source.html  clipped_8c.html  clipped_8h.html  clipped_8h_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_41f00cc4546591484c0a52c6b418b42a.html  dir_71363c91403e846b42d1bee97e3b2887.html  dir_791b54bd9203a6d00972725576bac15f.html  dir_83bcc5f5124e843fe39ce4504aa2feaa.html  dir_9837c2e456980333ce77846566c124a2.html  dir_b1a1bc6d8ca2a8ef6dfab6287ec4b4a3.html  dir_d8b801b9b84b98575a5a421f97929dac.html  dir_ddc6a95ff79220a58c1f67f590956b30.html  dir_e162c2ebb88ce6f6c0827b84a1fe342a.html  feature__tests_8c.html  feature__tests_8cxx.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.dot  menudata.js  sdl_8c.html  sdl_8h.html  sdl_8h_source.html
Doxygen/latex/: 3_810_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  3_817_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  ansi_8c.tex  ansi_8h.tex  circular_8c.tex  circular_8h.tex  clipped_8c.tex  clipped_8h.tex  feature__tests_8c.tex  (+15 more)
ansi/: CMakeLists.txt  Makefile  ansi.c  ansi.h  cmake_install.cmake
circular/: CMakeLists.txt  Makefile  circular.c  circular.h  cmake_install.cmake
clipped/: CMakeLists.txt  Doxyfile  Makefile  clipped.c  clipped.h  cmake_install.cmake
clipped/html/: clipped_8c.html  clipped_8c.js  clipped_8c__incl.dot  clipped_8h.html  clipped_8h.js  clipped_8h__dep__incl.dot  clipped_8h__incl.dot  clipped_8h_source.html  doxygen.css  files.html  files_dup.js  globals.html  globals_func.html  graph_legend.html  index.html  navtree.css  navtreedata.js  navtreeindex0.js
clipped/html/search/: all_0.js  all_1.js  all_2.js  files_0.js  functions_0.js  functions_1.js  search.css  searchdata.js
clipped/latex/: clipped_8c.tex  clipped_8c.tex.tmp  clipped_8c__incl.dot  clipped_8h.tex  clipped_8h__dep__incl.dot  clipped_8h__incl.dot  files.tex  refman.tex
html/: graph_legend.html  index.html
latex/: refman.fdb_latexmk  refman.fls  refman.tex
sdl/: .sdl.h.swp  CMakeLists.txt  Makefile  cmake_install.cmake  sdl.c  sdl.h
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  test.c  test_files
(+50 files in other folders)
